improved test process